项目结构调整

--- a/bbb-provider-api/bbb-provider-user-api/src/main/resources/application.yml
+++ b/bbb-provider-api/bbb-provider-user-api/src/main/resources/application.yml
@@ -2,32 +2,20 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-server:
-  port: 8080
 spring:
   application:
-    name: bbb-web
-  datasource:
-    username: root
-    password: mimamysql614
-    url: jdbc:mysql://118.25.187.1:3306/biubiubiu
-    driver-class-name: com.mysql.jdbc.Driver
-  mvc:
-    view:
-      prefix: /public/
-      suffix: .html
-      static-path-pattern: /**
-    resources:
-      static-locations: classpath:/**
+    name: bbb-provider-user-api
 
-feign:
-  hystrix:
-    enabled: true
+#  mvc:
+#    view:
+#      prefix: /public/
+#      suffix: .html
+#      static-path-pattern: /**
+#    resources:
+#      static-locations: classpath:/**
 
 
-mybatis:
-  mapper-locations: classpath:mapping/*Mapper.xml
-  type-aliases-package: com.jornah.biubiubiu.pojo
+
 
 #showSql
 logging:
