--- a/bbb-provider/bbb-user-service/pom.xml
+++ b/bbb-provider/bbb-user-service/pom.xml
@@ -8,10 +8,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>bbb-user-service</name>
     <description>Demo project for Spring Boot</description>
+
     <parent>
         <groupId>com.jornah</groupId>
         <artifactId>bbb-provider</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <dependencies>
         <dependency>
@@ -22,6 +23,16 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>HdrHistogram</artifactId>
+                    <groupId>org.hdrhistogram</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -54,6 +65,12 @@
             <groupId>com.jornah</groupId>
             <artifactId>bbb-common-base</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>lombok</artifactId>
+                    <groupId>org.projectlombok</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
