feat: 升级spring cloud版本，引用mybatis-plus，初步构建动态权限系统

--- a/bbb-common/bbb-common-security-server/src/main/resources/application.yml
+++ b/bbb-common/bbb-common-security-server/src/main/resources/application.yml
@@ -5,9 +5,12 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 server:
   port: 8801
+
 spring:
   application:
     name: bbb-common-security-server
+  main:
+    allow-bean-definition-overriding: true
   mvc:
     view:
       prefix: /public/
