--- a/bbb-provider/pom.xml
+++ b/bbb-provider/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>bbb-provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>bbb-provider</name>
+    <packaging>pom</packaging>
     <description>Demo project for Spring Boot</description>
 
     <modules>
