--- a/pom.xml
+++ b/pom.xml
@@ -11,20 +11,18 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
     </properties>
     <modules>
-        <module>bbb-provider-api</module>
         <module>bbb-micro-service-server</module>
+        <module>bbb-provider-api</module>
         <module>bbb-provider</module>
         <module>bbb-common</module>
-        <module>bbb-provider-api</module>
-        <module>bbb-provider</module>
         <module>bbb-gateway</module>
     </modules>
     <dependencies>
@@ -36,6 +34,16 @@
 
 
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
